--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A Messaging Application created for CSE 412 by Group 20"
     />
     <link
       rel="stylesheet"
@@ -38,7 +38,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <title>React App</title>
+    <title>CSE 412 | Messaging Application</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
